# beget-hosting-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: 404.html  README.md  beget-hosting-api.md  index.html  method-index.md  operator-guide.md  robots.txt  sitemap.xml
docs/schema/: errors.json  methods.json  pages.json
docs/source-pages/: beget-api.md  funkczii-dlya-raboty-s-domenami.md  funkczii-dlya-raboty-s-pochtoj.md  funkczii-dlya-sbora-statistiki.md  funkczii-upravleniya-akkauntom.md  funkczii-upravleniya-bekapami.md  funkczii-upravleniya-cron.md  funkczii-upravleniya-dns.md  funkczii-upravleniya-ftp.md  funkczii-upravleniya-mysql.md  funkczii-upravleniya-sajtami.md  obshhij-princzip-raboty-s-api.md
examples/: mcp-server.installed.json  mcp-server.write-enabled.json
scripts/: build_beget_docs.py
src/beget_mcp/: __init__.py  server.py
