[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "beget-hosting-mcp"
version = "0.1.0"
description = "MCP server for the Beget hosting API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Beget Hosting MCP contributors" }
]
keywords = ["mcp", "model-context-protocol", "beget", "hosting", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
beget-hosting-mcp = "beget_mcp.server:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beget_mcp = ["data/*.json"]
